force-app/main/default/objects/copado__Data_Change_Event__e/copado__Data_Change_Event__e.object-meta.xml
<CustomObject>
    <label>Copado Data Change Event</label>
    <pluralLabel>Copado Data Change Events</pluralLabel>
</CustomObject>