force-app/main/default/objects/copado__Data_Change_Event__e/fields/copado__Base_Object__c.field-meta.xml
<CustomField>
    <fullName>copado__Base_Object__c</fullName>
    <label>Base Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>