force-app/main/default/objects/copado__Data_Change_Event__e/fields/copado__Old_Value__c.field-meta.xml
<CustomField>
    <fullName>copado__Old_Value__c</fullName>
    <label>Old Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>