force-app/main/default/objects/copado__Data_Change_Event__e/fields/copado__Record_ID__c.field-meta.xml
<CustomField>
    <fullName>copado__Record_ID__c</fullName>
    <description>Base Object&apos;s record Instance Id</description>
    <label>Record ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>