force-app/main/default/objects/copado__Data_Change_Event__e/fields/copado__Subscriber_Code__c.field-meta.xml
<CustomField>
    <fullName>copado__Subscriber_Code__c</fullName>
    <label>Subscriber Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>