force-app/main/default/objects/copado__Data_Change_Event__e/fields/copado__Triggering_Action__c.field-meta.xml
<CustomField>
    <fullName>copado__Triggering_Action__c</fullName>
    <description>Insert, Update, Delete, Undelete</description>
    <label>Triggering Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>